--- a/main.css
+++ b/main.css
@@ -10,14 +10,6 @@ body {
   box-sizing: border-box;
 }
 
-#three-canvas {
-  width: 90vw;
-  position: fixed;
-  z-index: 10;
-  left: 0;
-  top: 0;
-}
-
 .sections {
   position: relative;
   z-index: 11;
@@ -66,8 +58,9 @@ a {
 /* main */
 .fix_motion {
   position: relative;
-  z-index: 1000;
+  z-index: 10000;
   height: 5000px;
+  background-color: #fff;
 }
 
 .no-csspositionsticky .fix_motion {
@@ -205,11 +198,495 @@ a {
   line-height: 1.5;
 }
 
+/* tiger */
+
+*:before,
+*:after {
+  position: absolute;
+  content: '';
+}
+
+.box {
+  position: relative;
+  background: #33658a;
+  width: 500px;
+  height: 500px;
+  margin: auto;
+  border-radius: 50%;
+  top: 25%;
+}
+
+.ball {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  top: 41%;
+  left: 45%;
+  border-radius: 50%;
+  background-color: #ee6352;
+  box-shadow: inset -10px -10px 0px #c62714;
+  animation: toss 3s ease infinite;
+}
+
+.tail {
+  position: absolute;
+  width: 200px;
+  height: 100px;
+  background: transparent;
+  top: 61%;
+  left: 72%;
+  transform-origin: left center;
+  transform: rotate(-20deg);
+  animation: flick 1s ease infinite;
+}
+.tail .tail-1 {
+  position: absolute;
+  width: 35%;
+  height: 20%;
+  background: orange;
+  bottom: 0;
+}
+.tail .tail-2 {
+  position: absolute;
+  width: 30%;
+  height: 20%;
+  background: orange;
+  transform: rotate(-20deg);
+  left: 30%;
+  top: 73%;
+  border-radius: 0 50% 50% 30%;
+  overflow: hidden;
+}
+.tail .tail-2 .end {
+  position: absolute;
+  background: black;
+  width: 30%;
+  height: 100%;
+  right: 0;
+}
+.tail .tail-3 {
+  position: absolute;
+  width: 25%;
+  height: 60%;
+  background: orange;
+  left: 60%;
+  top: 20%;
+  border-radius: 50% 50% 50% 0%;
+}
+
+.body {
+  position: absolute;
+  width: 200px;
+  height: 110px;
+  background: orange;
+  border-radius: 40% 40% 40% 50%;
+  top: 68%;
+  left: 39%;
+  transform: rotate(-15deg);
+}
+.body .arm-1 {
+  position: absolute;
+  background: orange;
+  height: 80px;
+  width: 43px;
+  left: 35%;
+  top: -70%;
+  transform-origin: bottom center;
+  transform: rotate(35deg);
+  border-radius: 50%;
+  border-top: solid 1px black;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  animation: arm1 1.5s ease infinite;
+}
+.body .leg-1 {
+  background: orange;
+  height: 80px;
+  width: 43px;
+  border-radius: 50%;
+  position: absolute;
+  top: -50%;
+  left: 80%;
+  border-top: solid 1px black;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  transform-origin: bottom center;
+  transform: rotate(-20deg);
+  animation: leg1 1.5s ease infinite;
+}
+
+.arm-2 {
+  background: orange;
+  height: 80px;
+  width: 43px;
+  border-radius: 50%;
+  position: absolute;
+  top: 68%;
+  left: 48%;
+  border-top: solid 1px black;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  transform-origin: bottom center;
+  transform: rotate(0deg);
+  animation: arm2 1.5s ease infinite;
+}
+
+.leg-2 {
+  background: orange;
+  height: 80px;
+  width: 43px;
+  border-radius: 50%;
+  position: absolute;
+  top: 65%;
+  left: 68%;
+  border-top: solid 1px black;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  transform-origin: bottom center;
+  transform: rotate(0deg);
+  animation: leg2 1.5s ease infinite;
+}
+
+.tiger {
+  position: relative;
+  top: 55%;
+  left: 15%;
+}
+.tiger .head-copy {
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  background: orange;
+  border-radius: 90% 90% 50% 50%;
+  transform: rotate(-45deg);
+  animation: tilt 2s ease infinite;
+}
+.tiger .head-copy .l-ear {
+  position: absolute;
+  width: 35%;
+  height: 40%;
+  background: orange;
+  top: -5%;
+  left: -12%;
+  border-radius: 50%;
+  transform: rotate(-25deg);
+}
+.tiger .head-copy .l-ear .ear-center {
+  position: absolute;
+  background: pink;
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+  top: 20%;
+  left: 15%;
+}
+.tiger .head-copy .r-ear {
+  position: absolute;
+  width: 35%;
+  height: 40%;
+  background: orange;
+  top: -5%;
+  right: -12%;
+  border-radius: 50%;
+  transform: rotate(25deg);
+}
+.tiger .head-copy .r-ear .ear-center {
+  position: absolute;
+  background: pink;
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+  top: 20%;
+  right: 15%;
+}
+.tiger .head {
+  width: 200px;
+  height: 150px;
+  position: absolute;
+  background: orange;
+  border-radius: 90% 90% 50% 50%;
+  overflow: hidden;
+  transform: rotate(-45deg);
+  border-right: solid 1px black;
+  border-bottom: solid 1px black;
+  animation: tilt 2s ease infinite;
+}
+.tiger .head .x-stripe-1 {
+  width: 30%;
+  height: 8%;
+  background: black;
+  position: absolute;
+  top: 10%;
+  left: 35%;
+  border-radius: 50%;
+}
+.tiger .head .x-stripe-2 {
+  width: 25%;
+  height: 8%;
+  background: black;
+  position: absolute;
+  top: 25%;
+  left: 38%;
+  border-radius: 50%;
+}
+.tiger .head .y-stripe {
+  position: absolute;
+  width: 5%;
+  height: 50%;
+  background: black;
+  border-radius: 50%;
+  left: 48%;
+  top: -7%;
+}
+.tiger .head .l-stripe-1 {
+  position: absolute;
+  width: 15%;
+  height: 10%;
+  background: black;
+  top: 45%;
+  left: -2%;
+  border-radius: 0 50% 50% 0;
+  transform: rotate(15deg);
+}
+.tiger .head .l-stripe-2 {
+  position: absolute;
+  width: 15%;
+  height: 10%;
+  background: black;
+  top: 65%;
+  left: -2%;
+  border-radius: 0 50% 50% 0;
+  transform: rotate(-15deg);
+}
+.tiger .head .r-stripe-1 {
+  position: absolute;
+  width: 15%;
+  height: 10%;
+  background: black;
+  top: 45%;
+  right: -2%;
+  border-radius: 50% 0 0 50%;
+  transform: rotate(-15deg);
+}
+.tiger .head .r-stripe-2 {
+  position: absolute;
+  width: 15%;
+  height: 10%;
+  background: black;
+  top: 65%;
+  right: -2%;
+  border-radius: 50% 0 0 50%;
+  transform: rotate(15deg);
+}
+.tiger .head .l-eye {
+  position: absolute;
+  height: 20%;
+  width: 10%;
+  background-color: black;
+  left: 20%;
+  top: 50%;
+  border-radius: 50%;
+  transform: rotate(20deg);
+}
+.tiger .head .l-eye .shine {
+  background: white;
+  height: 50%;
+  width: 50%;
+  border-radius: 50%;
+  position: absolute;
+  top: 5%;
+  left: 30%;
+}
+.tiger .head .r-eye {
+  position: absolute;
+  height: 20%;
+  width: 10%;
+  background-color: black;
+  right: 20%;
+  top: 50%;
+  border-radius: 50%;
+  transform: rotate(-20deg);
+}
+.tiger .head .r-eye .shine {
+  background: white;
+  height: 50%;
+  width: 50%;
+  border-radius: 50%;
+  position: absolute;
+  top: 5%;
+  right: 30%;
+}
+.tiger .head .snout {
+  width: 60%;
+  height: 50%;
+  background: white;
+  border-radius: 90% 90% 50% 50%;
+  position: absolute;
+  bottom: -10%;
+  left: 20%;
+}
+.tiger .head .snout .nose {
+  position: absolute;
+  width: 40%;
+  height: 30%;
+  background: pink;
+  left: 30%;
+  border-radius: 50%;
+}
+
+@keyframes toss {
+  0% {
+    top: 46%;
+    transform: rotate(-60deg);
+  }
+  10% {
+    top: 47%;
+    transform: rotate(-120deg);
+  }
+  20% {
+    top: 46%;
+    transform: rotate(-180deg);
+  }
+  30% {
+    top: 48%;
+    transform: rotate(-240deg);
+  }
+  40% {
+    top: 46%;
+    transform: rotate(-300deg);
+  }
+  50% {
+    top: 47%;
+    transform: rotate(-360deg);
+  }
+  60% {
+    top: 46%;
+    transform: rotate(-420deg);
+  }
+  70% {
+    transform: rotate(-480deg);
+  }
+  80% {
+    top: 5%;
+    transform: rotate(-880deg);
+  }
+  90% {
+    top: 6%;
+    transform: rotate(-2000deg);
+  }
+  100% {
+    top: 46%;
+    transform: rotate(-780deg);
+  }
+}
+@keyframes arm2 {
+  0% {
+    transform: rotate(10deg);
+  }
+  20% {
+    transform: rotate(-10deg);
+  }
+  40% {
+    transform: rotate(25deg);
+  }
+  60% {
+    transform: rotate(-25deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(10deg);
+  }
+}
+@keyframes leg2 {
+  0% {
+    transform: rotate(-25deg);
+  }
+  20% {
+    transform: rotate(25deg);
+  }
+  40% {
+    transform: rotate(-10deg);
+  }
+  60% {
+    transform: rotate(10deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(-25deg);
+  }
+}
+@keyframes arm1 {
+  0% {
+    transform: rotate(-10deg);
+  }
+  20% {
+    transform: rotate(10deg);
+  }
+  40% {
+    transform: rotate(-25deg);
+  }
+  60% {
+    transform: rotate(25deg);
+  }
+  80% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(10deg);
+  }
+}
+@keyframes leg1 {
+  0% {
+    transform: rotate(25deg);
+  }
+  20% {
+    transform: rotate(-25deg);
+  }
+  40% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(-10deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(25deg);
+  }
+}
+@keyframes tilt {
+  0% {
+    transform: rotate(-45deg);
+  }
+  50% {
+    transform: rotate(-40deg);
+  }
+  100% {
+    transform: rotate(-45deg);
+  }
+}
+@keyframes flick {
+  0% {
+    transform: rotate(-20deg);
+  }
+  50% {
+    transform: rotate(-25deg);
+  }
+  100% {
+    transform: rotate(-20deg);
+  }
+}
+
 /* sec01 */
 
 .sec01 {
   position: relative;
-  z-index: 110;
+  z-index: 210;
   background: #111;
   display: flex;
   height: 100vh;
@@ -324,7 +801,7 @@ a {
 .section_textmask {
   overflow: hidden;
   position: relative;
-  z-index: 120;
+  z-index: 220;
   padding-top: 160px;
   padding-bottom: 210px;
   background: #111;
@@ -413,7 +890,7 @@ a {
 .skill_list {
   height: 100vh;
   position: relative;
-  z-index: 110;
+  z-index: 210;
   display: grid;
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: repeat(2, 50%);
@@ -467,7 +944,7 @@ a {
 .scroll_box {
   background-color: #111;
   position: relative;
-  z-index: 110;
+  z-index: 210;
   height: 5000px;
 }
 .fix_box {
@@ -518,7 +995,7 @@ a {
 .sec03.down {
   background-color: #000;
   position: relative;
-  z-index: 100;
+  z-index: 200;
 }
 
 .sec03 .fix_tit {
@@ -557,10 +1034,21 @@ a {
 }
 
 /* 섹션03, 네비게이션 */
+.sec03 h2 a {
+  color: #fff;
+}
+.sec03 h2 a.black {
+  color: #000;
+}
+
 .sec03 .section03 {
   overflow: hidden;
+  position: relative;
   height: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
+  opacity: 0.3;
 }
 
 .sec03 .section03.fixed {
@@ -624,6 +1112,28 @@ a {
   text-decoration: none;
 }
 
+#a {
+  background-image: url('./images/sec03_bg1.png');
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#b {
+  background-image: url('./images/sec03_bg2.png');
+}
+
+#c {
+  background-image: url('./images/sec03_bg3.png');
+}
+
+#d {
+  background-image: url('./images/sec03_bg4.png');
+}
+
+.sec03 img {
+  width: 100%;
+}
 /* 큐브 css */
 .sec03 .cube_wrap {
   perspective: 600px;
@@ -646,7 +1156,7 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  border: 3px solid rgba(255, 255, 255, 1);
+  border: 3px solid rgba(255, 255, 255, 0.2);
   box-sizing: border-box;
 }
 
@@ -678,27 +1188,180 @@ a {
   transform: rotateX(-90deg) translateZ(200px);
 }
 
+.cube_wrap .cube_box .cube_face.front.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.back.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.left.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.right.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.top.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.bottom.s0 {
+  background-image: url('./images/sec03_bg1.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.cube_wrap .cube_box .cube_face.front.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.back.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.left.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.right.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.top.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.bottom.s1 {
+  background-image: url('./images/sec03_bg2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.cube_wrap .cube_box .cube_face.front.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.back.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.left.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.right.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.top.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.bottom.s2 {
+  background-image: url('./images/sec03_bg3.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.cube_wrap .cube_box .cube_face.front.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.back.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.left.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.right.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.top.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.cube_wrap .cube_box .cube_face.bottom.s3 {
+  background-image: url('./images/sec03_bg4.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 /* svg */
 
 /* common */
 .sec_svg {
   position: relative;
-  z-index: 1000;
+  z-index: 1;
   height: 4000px;
   background: #fff;
+}
+.sec_svg.down {
+  z-index: 220;
 }
 
 /* 타이틀 */
 .fix_tit2 {
+  display: inline-block;
   position: fixed;
+  transform: translate(-50%, -50%);
   left: 50%;
   top: 50%;
   z-index: 20;
+  text-align: center;
   font-family: 'NotoB';
   font-size: 180px;
   line-height: 1;
   color: #000;
-  transform: translate(-50%, -50%);
   opacity: 0.4;
 }
 
@@ -711,18 +1374,18 @@ a {
   border-bottom: 3px solid rgba(000, 000, 000, 0.6);
 }
 
-/* svg */
+/* svg  */
 .svg_wrap {
   position: fixed;
   left: 50%;
   top: 50%;
   z-index: 30;
-  width: 1920px;
-  height: 1080px;
+  width: 100%;
+  height: 100%;
   transform: translate(-50%, -50%);
 }
 
-.svg_wrap #ggang_svg {
+.svg_wrap #svg {
   width: 100%;
   fill: none;
   stroke: #555;
@@ -733,9 +1396,9 @@ a {
 .video_wrap {
   position: fixed;
   left: 50%;
-  top: 50%;
+  top: 52%;
   z-index: 10;
-  width: 1920px;
+  width: 100%;
   opacity: 0;
   transform: translate(-50%, -50%);
   transition: opacity 0.5s;
@@ -743,4 +1406,14 @@ a {
 
 .video_wrap video {
   width: 100%;
+}
+
+/* sec04 */
+
+.sec04 {
+  position: relative;
+  z-index: 300;
+  width: 100%;
+  height: 100vh;
+  background-color: #111;
 }
