--- a/main.css
+++ b/main.css
@@ -168,6 +168,13 @@ a {
   width: 0px;
 }
 
+.bg_img img {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 100%;
+}
+
 .fix_motion .sticky_cont .cont_box .mask_bg {
   position: absolute;
   background-color: #000;
@@ -222,490 +229,6 @@ a {
   font-size: 80px;
   color: #000;
   line-height: 1.5;
-}
-
-/* tiger */
-
-*:before,
-*:after {
-  position: absolute;
-  content: '';
-}
-
-.box {
-  position: relative;
-  background: #33658a;
-  width: 500px;
-  height: 500px;
-  margin: auto;
-  border-radius: 50%;
-  top: 25%;
-}
-
-.ball {
-  position: absolute;
-  width: 150px;
-  height: 150px;
-  top: 41%;
-  left: 45%;
-  border-radius: 50%;
-  background-color: #ee6352;
-  box-shadow: inset -10px -10px 0px #c62714;
-  animation: toss 3s ease infinite;
-}
-
-.tail {
-  position: absolute;
-  width: 200px;
-  height: 100px;
-  background: transparent;
-  top: 61%;
-  left: 72%;
-  transform-origin: left center;
-  transform: rotate(-20deg);
-  animation: flick 1s ease infinite;
-}
-.tail .tail-1 {
-  position: absolute;
-  width: 35%;
-  height: 20%;
-  background: orange;
-  bottom: 0;
-}
-.tail .tail-2 {
-  position: absolute;
-  width: 30%;
-  height: 20%;
-  background: orange;
-  transform: rotate(-20deg);
-  left: 30%;
-  top: 73%;
-  border-radius: 0 50% 50% 30%;
-  overflow: hidden;
-}
-.tail .tail-2 .end {
-  position: absolute;
-  background: black;
-  width: 30%;
-  height: 100%;
-  right: 0;
-}
-.tail .tail-3 {
-  position: absolute;
-  width: 25%;
-  height: 60%;
-  background: orange;
-  left: 60%;
-  top: 20%;
-  border-radius: 50% 50% 50% 0%;
-}
-
-.body {
-  position: absolute;
-  width: 200px;
-  height: 110px;
-  background: orange;
-  border-radius: 40% 40% 40% 50%;
-  top: 68%;
-  left: 39%;
-  transform: rotate(-15deg);
-}
-.body .arm-1 {
-  position: absolute;
-  background: orange;
-  height: 80px;
-  width: 43px;
-  left: 35%;
-  top: -70%;
-  transform-origin: bottom center;
-  transform: rotate(35deg);
-  border-radius: 50%;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
-  animation: arm1 1.5s ease infinite;
-}
-.body .leg-1 {
-  background: orange;
-  height: 80px;
-  width: 43px;
-  border-radius: 50%;
-  position: absolute;
-  top: -50%;
-  left: 80%;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
-  transform-origin: bottom center;
-  transform: rotate(-20deg);
-  animation: leg1 1.5s ease infinite;
-}
-
-.arm-2 {
-  background: orange;
-  height: 80px;
-  width: 43px;
-  border-radius: 50%;
-  position: absolute;
-  top: 68%;
-  left: 48%;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
-  transform-origin: bottom center;
-  transform: rotate(0deg);
-  animation: arm2 1.5s ease infinite;
-}
-
-.leg-2 {
-  background: orange;
-  height: 80px;
-  width: 43px;
-  border-radius: 50%;
-  position: absolute;
-  top: 65%;
-  left: 68%;
-  border-top: solid 1px black;
-  border-left: solid 1px black;
-  border-right: solid 1px black;
-  transform-origin: bottom center;
-  transform: rotate(0deg);
-  animation: leg2 1.5s ease infinite;
-}
-
-.tiger {
-  position: relative;
-  top: 55%;
-  left: 15%;
-}
-.tiger .head-copy {
-  width: 200px;
-  height: 150px;
-  position: absolute;
-  background: orange;
-  border-radius: 90% 90% 50% 50%;
-  transform: rotate(-45deg);
-  animation: tilt 2s ease infinite;
-}
-.tiger .head-copy .l-ear {
-  position: absolute;
-  width: 35%;
-  height: 40%;
-  background: orange;
-  top: -5%;
-  left: -12%;
-  border-radius: 50%;
-  transform: rotate(-25deg);
-}
-.tiger .head-copy .l-ear .ear-center {
-  position: absolute;
-  background: pink;
-  width: 70%;
-  height: 70%;
-  border-radius: 50%;
-  top: 20%;
-  left: 15%;
-}
-.tiger .head-copy .r-ear {
-  position: absolute;
-  width: 35%;
-  height: 40%;
-  background: orange;
-  top: -5%;
-  right: -12%;
-  border-radius: 50%;
-  transform: rotate(25deg);
-}
-.tiger .head-copy .r-ear .ear-center {
-  position: absolute;
-  background: pink;
-  width: 70%;
-  height: 70%;
-  border-radius: 50%;
-  top: 20%;
-  right: 15%;
-}
-.tiger .head {
-  width: 200px;
-  height: 150px;
-  position: absolute;
-  background: orange;
-  border-radius: 90% 90% 50% 50%;
-  overflow: hidden;
-  transform: rotate(-45deg);
-  border-right: solid 1px black;
-  border-bottom: solid 1px black;
-  animation: tilt 2s ease infinite;
-}
-.tiger .head .x-stripe-1 {
-  width: 30%;
-  height: 8%;
-  background: black;
-  position: absolute;
-  top: 10%;
-  left: 35%;
-  border-radius: 50%;
-}
-.tiger .head .x-stripe-2 {
-  width: 25%;
-  height: 8%;
-  background: black;
-  position: absolute;
-  top: 25%;
-  left: 38%;
-  border-radius: 50%;
-}
-.tiger .head .y-stripe {
-  position: absolute;
-  width: 5%;
-  height: 50%;
-  background: black;
-  border-radius: 50%;
-  left: 48%;
-  top: -7%;
-}
-.tiger .head .l-stripe-1 {
-  position: absolute;
-  width: 15%;
-  height: 10%;
-  background: black;
-  top: 45%;
-  left: -2%;
-  border-radius: 0 50% 50% 0;
-  transform: rotate(15deg);
-}
-.tiger .head .l-stripe-2 {
-  position: absolute;
-  width: 15%;
-  height: 10%;
-  background: black;
-  top: 65%;
-  left: -2%;
-  border-radius: 0 50% 50% 0;
-  transform: rotate(-15deg);
-}
-.tiger .head .r-stripe-1 {
-  position: absolute;
-  width: 15%;
-  height: 10%;
-  background: black;
-  top: 45%;
-  right: -2%;
-  border-radius: 50% 0 0 50%;
-  transform: rotate(-15deg);
-}
-.tiger .head .r-stripe-2 {
-  position: absolute;
-  width: 15%;
-  height: 10%;
-  background: black;
-  top: 65%;
-  right: -2%;
-  border-radius: 50% 0 0 50%;
-  transform: rotate(15deg);
-}
-.tiger .head .l-eye {
-  position: absolute;
-  height: 20%;
-  width: 10%;
-  background-color: black;
-  left: 20%;
-  top: 50%;
-  border-radius: 50%;
-  transform: rotate(20deg);
-}
-.tiger .head .l-eye .shine {
-  background: white;
-  height: 50%;
-  width: 50%;
-  border-radius: 50%;
-  position: absolute;
-  top: 5%;
-  left: 30%;
-}
-.tiger .head .r-eye {
-  position: absolute;
-  height: 20%;
-  width: 10%;
-  background-color: black;
-  right: 20%;
-  top: 50%;
-  border-radius: 50%;
-  transform: rotate(-20deg);
-}
-.tiger .head .r-eye .shine {
-  background: white;
-  height: 50%;
-  width: 50%;
-  border-radius: 50%;
-  position: absolute;
-  top: 5%;
-  right: 30%;
-}
-.tiger .head .snout {
-  width: 60%;
-  height: 50%;
-  background: white;
-  border-radius: 90% 90% 50% 50%;
-  position: absolute;
-  bottom: -10%;
-  left: 20%;
-}
-.tiger .head .snout .nose {
-  position: absolute;
-  width: 40%;
-  height: 30%;
-  background: pink;
-  left: 30%;
-  border-radius: 50%;
-}
-
-@keyframes toss {
-  0% {
-    top: 46%;
-    transform: rotate(-60deg);
-  }
-  10% {
-    top: 47%;
-    transform: rotate(-120deg);
-  }
-  20% {
-    top: 46%;
-    transform: rotate(-180deg);
-  }
-  30% {
-    top: 48%;
-    transform: rotate(-240deg);
-  }
-  40% {
-    top: 46%;
-    transform: rotate(-300deg);
-  }
-  50% {
-    top: 47%;
-    transform: rotate(-360deg);
-  }
-  60% {
-    top: 46%;
-    transform: rotate(-420deg);
-  }
-  70% {
-    transform: rotate(-480deg);
-  }
-  80% {
-    top: 5%;
-    transform: rotate(-880deg);
-  }
-  90% {
-    top: 6%;
-    transform: rotate(-2000deg);
-  }
-  100% {
-    top: 46%;
-    transform: rotate(-780deg);
-  }
-}
-@keyframes arm2 {
-  0% {
-    transform: rotate(10deg);
-  }
-  20% {
-    transform: rotate(-10deg);
-  }
-  40% {
-    transform: rotate(25deg);
-  }
-  60% {
-    transform: rotate(-25deg);
-  }
-  80% {
-    transform: rotate(10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-@keyframes leg2 {
-  0% {
-    transform: rotate(-25deg);
-  }
-  20% {
-    transform: rotate(25deg);
-  }
-  40% {
-    transform: rotate(-10deg);
-  }
-  60% {
-    transform: rotate(10deg);
-  }
-  80% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(-25deg);
-  }
-}
-@keyframes arm1 {
-  0% {
-    transform: rotate(-10deg);
-  }
-  20% {
-    transform: rotate(10deg);
-  }
-  40% {
-    transform: rotate(-25deg);
-  }
-  60% {
-    transform: rotate(25deg);
-  }
-  80% {
-    transform: rotate(-10deg);
-  }
-  100% {
-    transform: rotate(10deg);
-  }
-}
-@keyframes leg1 {
-  0% {
-    transform: rotate(25deg);
-  }
-  20% {
-    transform: rotate(-25deg);
-  }
-  40% {
-    transform: rotate(10deg);
-  }
-  60% {
-    transform: rotate(-10deg);
-  }
-  80% {
-    transform: rotate(10deg);
-  }
-  100% {
-    transform: rotate(25deg);
-  }
-}
-@keyframes tilt {
-  0% {
-    transform: rotate(-45deg);
-  }
-  50% {
-    transform: rotate(-40deg);
-  }
-  100% {
-    transform: rotate(-45deg);
-  }
-}
-@keyframes flick {
-  0% {
-    transform: rotate(-20deg);
-  }
-  50% {
-    transform: rotate(-25deg);
-  }
-  100% {
-    transform: rotate(-20deg);
-  }
 }
 
 /* sec01 */
@@ -903,6 +426,7 @@ a {
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: repeat(2, 50%);
   background-color: #fff;
+  padding: 7rem;
 }
 
 .skill_icon,
@@ -922,7 +446,7 @@ a {
 
 .skill_icon img,
 .skill_icon2 img {
-  width: 100%;
+  width: 80%;
 }
 
 .skill_icon2 {
@@ -1541,6 +1065,10 @@ a {
   .call > li {
     height: 57%;
   }
+  .skill_icon img,
+  .skill_icon2 img {
+    width: 100%;
+  }
 }
 
 @media (max-width: 1300px) {
@@ -1620,6 +1148,10 @@ a {
     font-size: 1.5rem;
     line-height: 3rem;
     text-align: center;
+  }
+  .skill_icon img,
+  .skill_icon2 img {
+    width: 80%;
   }
   .sec03 .cube_wrap {
     perspective: 900px;
@@ -1711,6 +1243,9 @@ a {
   .video_wrap {
     left: 60%;
   }
+  .skill_list {
+    padding: 3rem;
+  }
 }
 @media (max-width: 640px) {
   .skill_txt1,
@@ -1744,6 +1279,10 @@ a {
   .skill_txt2 {
     font-size: 0.75rem;
     line-height: 1.4rem;
+  }
+  .skill_icon img,
+  .skill_icon2 img {
+    width: 100%;
   }
 }
 @media (max-width: 540px) {
