--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@
 body {
   margin: 0;
   font-family: SUIT-Medium;
+  overscroll-behavior: none;
+  -webkit-user-select: none;
 }
 
 body::after {
@@ -486,8 +488,9 @@ a {
   display: grid;
   grid-template-columns: repeat(5, 20%);
   grid-template-rows: repeat(2, 50%);
-  background-color: #fff;
+  background-color: #333;
   padding: 7rem;
+  color: #fff;
 }
 
 .skill_icon,
